--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,8 @@
             <h1 class="text-3xl font-bold">AI Blog Generator</h1>
         </div>
         <div>
-            <a href="#" class="text-white hover:underline"> Logout</a>
+            Welcome {{user.username}} || 
+            <a href="{% url 'logout' %}" class="text-white hover:underline"> Logout</a>
         </div>
     </nav>
     <!-- Main -->
